--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-22 Mon 18:26]
+#+CAPTION: Clock summary at [2018-10-22 Mon 19:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:26* |       |       |   0.0 |
+| *Total time*                                                                | *54:47* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:26   |       |       |   0.0 |
-| Active                                                                      |         | 54:26 |       |   0.0 |
+| Stories                                                                     | 54:47   |       |       |   0.0 |
+| Active                                                                      |         | 54:47 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -50,7 +50,7 @@
 | Design a top-level Dogen API                                                |         |       | 13:53 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:37 |   0.0 |
 | Update dogen namespaces to match the new specification                      |         |       |  0:15 |   0.0 |
-| Add support for nested namespaces                                           |         |       |  0:56 |   0.0 |
+| Add support for nested namespaces                                           |         |       |  1:17 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -802,6 +802,8 @@ We need to update one model at a time.
 
 *** STARTED Add support for nested namespaces
     :LOGBOOK:
+    CLOCK: [2018-10-22 Mon 19:39]--[2018-10-22 Mon 19:42] =>  0:03
+    CLOCK: [2018-10-22 Mon 18:27]--[2018-10-22 Mon 18:45] =>  0:18
     CLOCK: [2018-10-22 Mon 18:23]--[2018-10-22 Mon 18:26] =>  0:03
     CLOCK: [2018-10-22 Mon 17:35]--[2018-10-22 Mon 18:22] =>  0:47
     CLOCK: [2018-10-22 Mon 17:28]--[2018-10-22 Mon 17:34] =>  0:06
