--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-22 Mon 19:57]
+#+CAPTION: Clock summary at [2018-10-23 Tue 11:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *55:01* |       |       |   0.0 |
+| *Total time*                                                                | *57:44* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 55:01   |       |       |   0.0 |
-| Active                                                                      |         | 55:01 |       |   0.0 |
+| Stories                                                                     | 57:44   |       |       |   0.0 |
+| Active                                                                      |         | 57:44 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -47,10 +47,10 @@
 | Fix warnings on windows                                                     |         |       |  4:15 |   0.0 |
 | Setup a secondary machine for development                                   |         |       |  1:04 |   0.0 |
 | Remove facets that are not being used                                       |         |       |  8:31 |   0.0 |
-| Design a top-level Dogen API                                                |         |       | 13:53 |   0.0 |
-| Read up on framework and API design                                         |         |       |  2:37 |   0.0 |
+| Design a top-level Dogen API                                                |         |       | 14:46 |   0.0 |
+| Read up on framework and API design                                         |         |       |  3:39 |   0.0 |
 | Update dogen namespaces to match the new specification                      |         |       |  0:15 |   0.0 |
-| Add support for nested namespaces                                           |         |       |  1:31 |   0.0 |
+| Add support for nested namespaces                                           |         |       |  2:19 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -690,6 +690,7 @@ Links:
 *** COMPLETED Design a top-level Dogen API                            :story:
     CLOSED: [2018-10-22 Mon 17:12]
     :LOGBOOK:
+    CLOCK: [2018-10-23 Tue 09:51]--[2018-10-23 Tue 10:44] =>  0:53
     CLOCK: [2018-10-22 Mon 16:05]--[2018-10-22 Mon 17:12] =>  1:07
     CLOCK: [2018-10-22 Mon 09:03]--[2018-10-22 Mon 09:21] =>  0:18
     CLOCK: [2018-10-20 Sat 07:48]--[2018-10-20 Sat 07:55] =>  0:07
@@ -756,6 +757,7 @@ Architecture vision:
 
 *** STARTED Read up on framework and API design                       :story:
      :LOGBOOK:
+     CLOCK: [2018-10-23 Tue 08:48]--[2018-10-23 Tue 09:50] =>  1:02
      CLOCK: [2018-10-22 Mon 08:30]--[2018-10-22 Mon 09:02] =>  0:32
      CLOCK: [2018-10-19 Fri 09:54]--[2018-10-19 Fri 10:11] =>  0:17
      CLOCK: [2018-10-19 Fri 09:28]--[2018-10-19 Fri 09:53] =>  0:25
@@ -800,8 +802,9 @@ the directory names follow the same naming convention.
 
 We need to update one model at a time.
 
-*** STARTED Add support for nested namespaces
+*** STARTED Add support for nested namespaces                         :story:
     :LOGBOOK:
+    CLOCK: [2018-10-23 Tue 10:45]--[2018-10-23 Tue 11:33] =>  0:48
     CLOCK: [2018-10-22 Mon 19:43]--[2018-10-22 Mon 19:57] =>  0:14
     CLOCK: [2018-10-22 Mon 19:39]--[2018-10-22 Mon 19:42] =>  0:03
     CLOCK: [2018-10-22 Mon 18:27]--[2018-10-22 Mon 18:45] =>  0:18
